Mon Dec 21 15:27:48 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* ext/stringio/stringio.c (strio_getline): fix for "" as separator.
	  [ruby-dev:34591] (Backport r17739 by Yusuke Endoh from trunk).

Mon Dec 21 15:20:42 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/openssl/{common.pem,max.pem}: added fixture certificates.
	  needed for new tests added on Sun Dec 13 23:07:05 2009.

Mon Dec 21 08:15:31 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* object.c: Object#initialize accepts any number of arguments
	  [ruby-core:27080]

Sun Dec 20 23:43:46 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/net/http.rb (HTTPGenericRequest#send_request_with_body_stream):
	  increased encoding chunk size for POST request with body_stream
	  (1K -> 16K). patched by Brian Candler. #1284.

	* test/net/http/test_post_io.rb: added for the patch. It's good if a
	  patch comes with a test.

Sat Dec 19 09:31:25 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/set.rb (initialize): Add check that argument is enumerable

Wed Dec 16 16:57:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/un.rb (httpd): try to convert port number to integer.

Wed Dec 16 15:05:42 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/un.rb (wait_writable): wait until target files can be
	  written actually.

	* lib/un.rb (mkmf): new command to create makefile.

	* lib/un.rb (rmdir): added -p option.

	* lib/un.rb (httpd): easy WEBrick HTTP server.

Tue Dec 15 11:48:41 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* string.c (rb_str_inspect): wrong result of UTF-8 inspect because of
	  the mistake of calculation.  reported by eban via IRC.

Sun Dec 13 23:07:05 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/openssl/*: added some tests from jruby-openssl.

Mon Dec  7 07:05:05 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/bigdecimal.rb: fix comparison operators [ruby-core:26646]
